RESOLVED FIXED245138
Some color related CSS properties are not properly initialized
https://bugs.webkit.org/show_bug.cgi?id=245138
Summary Some color related CSS properties are not properly initialized
Matthieu Dubet
Reported 2022-09-13 06:47:08 PDT
At least textFillColor, textStrokeColor, textDecorationColor, textEmphasisColor. They all should have a proper initialization function in RenderStyle which should initialize them to currentcolor (per spec). Currently, they don't have their own initialization function and default-initialized to Color {}, which is invalid and thus is later "interpreted" as currentcolor. This is working "by accident".
Attachments
Matthieu Dubet
Comment 1 2022-09-13 06:50:54 PDT
EWS
Comment 2 2022-09-13 14:39:41 PDT
Committed 254458@main (466a830e85aa): <https://commits.webkit.org/254458@main> Reviewed commits have been landed. Closing PR #4308 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-09-13 14:40:19 PDT
Note You need to log in before you can comment on or make changes to this bug.