Cherry-pick 466a830e85aa. rdar://problem/101003866

Correctly initialize some CSS color properties.
    https://bugs.webkit.org/show_bug.cgi?id=245138

    Reviewed by Tim Nguyen.

    Before this commit, those properties didn't have their own
    initialization function and default-initialized to Color {},
    which is an invalid color and thus is later "interpreted" as
    currentcolor, correctly having an "implicit" current color behavior.
    This commit makes this behavior explicit, and will allow changing the
    underlying representation of "current color" in the future.

    * Source/WebCore/rendering/style/RenderStyle.h:
    (WebCore::RenderStyle::initialTextStrokeColor):
    (WebCore::RenderStyle::initialTextFillColor):
    (WebCore::RenderStyle::initialTextEmphasisColor):
    (WebCore::RenderStyle::initialTextDecorationColor):
    * Source/WebCore/rendering/style/StyleRareInheritedData.cpp:
    (WebCore::StyleRareInheritedData::StyleRareInheritedData):
    * Source/WebCore/rendering/style/StyleRareNonInheritedData.cpp:
    (WebCore::StyleRareNonInheritedData::StyleRareNonInheritedData):

    Canonical link: https://commits.webkit.org/254458@main

Canonical link: https://commits.webkit.org/252432.556@safari-7614-branch